--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello GitHub</title>
+	<title>Push to GitHub</title>
 </head>
 <body>
-	Hello GitHub
+	Push to GitHub
 </body>
 </html>
